[metadata]
name = djfapi
version = 0.0.4
author = Manuel Stingl
author_email = opensource@voltane.eu
description = Utilities for use with FastAPI and django
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Framework :: Django
    Framework :: FastAPI
    Topic :: Utilities
    # Development Status :: 5 - Production/Stable
url = https://github.com/Voltane-EU/djfapi

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    python-jose[cryptography]
    django >= 3.0
    fastapi >= 0.63.0
    pydantic >= 1.8
    langcodes
    django-health-check >= 3.16
    python-forge
